
inc += include_directories('.')

src += files(
    'Closed.cpp',
    'Closing.cpp',
    'GarageDoorOpener.cpp',
    'Open.cpp',
    'Opening.cpp',
    'StateMachine.cpp',
    'StoppedClosing.cpp',
    'StoppedOpening.cpp', 
)

#ts = executable(
#'app',
#sources : ['main.cpp', src],
#include_directories : inc,
#)
